# humanleague

./: .Rbuildignore  .gitignore  .travis.yml  Compare.R  Compare3.R  DESCRIPTION  LICENCE  LICENSE  LICENSE.md  MANIFEST.in  NAMESPACE  NSSW.R  README.md  TestQvsIPF.R  TestQvsP.R  appveyor.yml  compare_ipf.R  conda-env.yaml  flatten.R  harness.cpp  ipf.py  launch.json  perf.R  perf.py  pyproject.toml  qis.py  r-perf.sh  requirements.txt  settings.json  setup.cfg  setup.py  setup.py_old  test.py
.github/workflows/: conda-package.yml  conda.yml  coverage.yml  pip-package.yml  pypi-release.yml  (+5 more)
R/: RcppExports.R  humanleague.R
deprecated/: CQIWS.cpp  GQIWS.cpp  IPF.cpp  IPFOld.h  NDArray.h  NDArrayUtils.h  QIWS.cpp  QIWS.h  QSIPF.cpp  QSIPF.h  TestDDWR.cpp
dev/: Makefile  main.cpp  perf.cpp  perf.mk
doc/: api.md  paper.bib  paper.md  type-stubs.md
humanleague/: Array.h  Object.cpp  Object.h  README.md  __init__.py  __init__.pyi  py_api.cpp  utils.py
json/: Module.cpp  README.md  binding.gyp  json_api.cpp  json_api.h  server.js  test.js  test_server.js
man/: constrain.Rd  correlatedSobol2Sequence.Rd  flatten.Rd  humanleague.Rd  integerise.Rd  ipf.Rd  pop.Rd  pop3.Rd  prob2IntFreq.Rd  qis.Rd  qisi.Rd  qsipf.Rd  sobolSequence.Rd  synthPop.Rd  synthPopC.Rd  synthPopG.Rd  synthPopR.Rd  unitTest.Rd  wip_ipf.Rd
node.js/: Module.cpp  README.md  binding.gyp  json_api.cpp  package.json  run_server_test.sh  server.js  test.js  test_server.js
python/: Array.h  Object.cpp  Object.h  README.md  make.py  py_api.cpp  setup.py  test.py
scripts/: create-conda-env.sh  docstr2md.py  package.sh
src/: CQIWS.cpp  CQIWS.h  DDWR.h  GQIWS.cpp  GQIWS.h  Global.h  IPF.cpp  IPF.h  IPF2.h  IPFOld.h  IQRS.h  IWRS.h  Index.cpp  Index.h  Index2.h  Integerise.cpp  Integerise.h  Log.h  Makevars  Microsynthesis.h  NDArray.h  NDArray2.h  NDArrayUtils.cpp  NDArrayUtils.h  NDArrayUtils2.cpp  NDArrayUtils2.h  PValue.cpp  PValue.h  QIPF.h  QIS.cpp  QIS.h  QISI.cpp  QISI.h  QIWS.cpp  QIWS.h  QRPF.h  QRPF4.h  QSIPF.cpp  QSIPF.h  RQIWS.cpp  (+28 more)
tests/: test.py  test_all.py  test_errors.py  test_utils.py  testthat.R
vignettes/: QIPF.Rmd  QuasirandomIntegerSampling.Rmd  QuasirandomIntegerSampling.tex  QuasirandomIntegerSampling_JASSS.tex  Sampling.Rmd  not-so-simple-world.Rmd  ref.bib
(+2 files in other folders)
