[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "pybind11>=2.10.3",
  "pytest"
]

build-backend = "setuptools.build_meta"

[project]
name = "humanleague"
version = "2.3.0"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENSE.md"}
description = "Microsynthesis using quasirandom sampling and/or IPF"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.1"
]

[project.optional-dependencies]
dev = [
  "pybind11>=2.10.3",
  "pytest>=7.1.3",
  "mypy>=1.5.0",
  "mypy-extensions>=1.0.0",
  "ruff>=0.0.286",
  "build>=0.10.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
