[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "pybind11>=2.10.3",
  "pytest"
]

build-backend = "setuptools.build_meta"

[project]
name = "humanleague"
version = "2.4.0"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENSE.md"}
description = "Microsynthesis using quasirandom sampling and/or IPF"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
]

[project.optional-dependencies]
dev = [
  "pybind11>=2.10.3",
  "pytest>=8.1.4",
  "mypy>=1.5.0",
  "mypy-extensions>=1.0.0",
  "ruff>=0.0.286",
  "build>=1.2.2.post1"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
